--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "html-webpack-plugin": "^5.6.3",
     "prettier": "3.3.3",
     "style-loader": "^4.0.0",
-    "webpack": "^5.95.0",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
@@ -334,6 +334,9 @@
     "word-wrap": "^1.2.5",
     "ws": "^8.18.0",
     "yocto-queue": "^0.1.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "description": ""
 }
