--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["aqius", "daymax", "Moonphase", "precipmax", "windspeedmax"]
+	"cSpell.words": [
+		"aqius",
+		"daymax",
+		"Moonphase",
+		"precipmax",
+		"unitgroup",
+		"windspeedmax"
+	]
 }
