--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
 	"name": "webpack",
 	"version": "1.0.0",
 	"main": "index.js",
-	"sideEffects": [
-		"*.css"
-	],
+	"sideEffects": ["*.css"],
 	"scripts": {
-		"start": "webpack serve --open --config webpack.dev.js",
-		"build": "webpack --config webpack.prod.js"
+		"dev": "webpack serve --open --config webpack.dev.js",
+		"build": "webpack --config webpack.prod.js",
+		"deploy": "git subtree push --prefix dist origin gh-pages"
 	},
 	"keywords": [],
 	"author": "",
